--- a/package.json
+++ b/package.json
@@ -4,6 +4,11 @@
   "scripts": {
     "babel": "babel app.js --out-file index.js"
   },
+  "dependencies": {
+    "random-puppy": "^1.1.0",
+    "twilio": "^2.11.0",
+    "request-promise": "^4.1.1"
+  },
   "devDependencies": {
     "babel-cli": "^6.0.0",
     "babel-preset-es2015": "^6.18.0",
